--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-dom": "18.2.0",
     "react-player": "^2.12.0",
     "react-redux": "^8.0.5",
+    "react-scroll": "^1.8.9",
     "redux": "^4.2.1",
     "smooth-scroll": "^16.1.3",
     "typewriter-effect": "^2.19.0",
